_generated-doc/2.2/config/quarkus-oidc-oidc-tenant-config-authentication.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-oidc-tenant-config-authentication_configuration]]link:#quarkus-oidc-oidc-tenant-config-authentication_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.redirect-path]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.redirect-path[quarkus.oidc.authentication.redirect-path]`

[.description]
--
Relative path for calculating a "redirect_uri" query parameter. It has to start from a forward slash and will be appended to the request URI's host and port. For example, if the current request URI is 'https://localhost:8080/service' then a 'redirect_uri' parameter will be set to 'https://localhost:8080/' if this property is set to '/' and be the same as the request URI if this property has not been configured. Note the original request URI will be restored after the user has authenticated if 'restorePathAfterRedirect' is set to 'true'.
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.restore-path-after-redirect]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.restore-path-after-redirect[quarkus.oidc.authentication.restore-path-after-redirect]`

[.description]
--
If this property is set to 'true' then the original request URI which was used before the authentication will be restored after the user has been redirected back to the application. Note if `redirectPath` property is not set the the original request URI will be restored even if this property is disabled.
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.remove-redirect-parameters]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.remove-redirect-parameters[quarkus.oidc.authentication.remove-redirect-parameters]`

[.description]
--
Remove the query parameters such as 'code' and 'state' set by the OIDC server on the redirect URI after the user has authenticated by redirecting a user to the same URI but without the query parameters.
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.verify-access-token]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.verify-access-token[quarkus.oidc.authentication.verify-access-token]`

[.description]
--
Both ID and access tokens are fetched from the OIDC provider as part of the authorization code flow. ID token is always verified on every user request as the primary token which is used to represent the principal and extract the roles. Access token is not verified by default since it is meant to be propagated to the downstream services. The verification of the access token should be enabled if it is injected as a JWT token. Access tokens obtained as part of the code flow will always be verified if `quarkus.oidc.roles.source` property is set to `accesstoken` which means the authorization decision will be based on the roles extracted from the access token. Bearer access tokens are always verified.
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.force-redirect-https-scheme]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.force-redirect-https-scheme[quarkus.oidc.authentication.force-redirect-https-scheme]`

[.description]
--
Force 'https' as the 'redirect_uri' parameter scheme when running behind an SSL terminating reverse proxy. This property, if enabled, will also affect the logout `post_logout_redirect_uri` and the local redirect requests.
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.scopes]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.scopes[quarkus.oidc.authentication.scopes]`

[.description]
--
List of scopes
--|list of string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-force-secure]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-force-secure[quarkus.oidc.authentication.cookie-force-secure]`

[.description]
--
If enabled the state, session and post logout cookies will have their 'secure' parameter set to 'true' when HTTP is used. It may be necessary when running behind an SSL terminating reverse proxy. The cookies will always be secure if HTTPS is used even if this property is set to false.
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-path]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-path[quarkus.oidc.authentication.cookie-path]`

[.description]
--
Cookie path parameter value which, if set, will be used to set a path parameter for the session, state and post logout cookies. The `cookie-path-header` property, if set, will be checked first.
--|string 
|`/`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-path-header]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-path-header[quarkus.oidc.authentication.cookie-path-header]`

[.description]
--
Cookie path header parameter value which, if set, identifies the incoming HTTP header whose value will be used to set a path parameter for the session, state and post logout cookies. If the header is missing then the `cookie-path` property will be checked.
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-domain]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.cookie-domain[quarkus.oidc.authentication.cookie-domain]`

[.description]
--
Cookie domain parameter value which, if set, will be used for the session, state and post logout cookies.
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.user-info-required]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.user-info-required[quarkus.oidc.authentication.user-info-required]`

[.description]
--
If this property is set to 'true' then an OIDC UserInfo endpoint will be called
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.session-age-extension]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.session-age-extension[quarkus.oidc.authentication.session-age-extension]`

[.description]
--
Session age extension in minutes. The user session age property is set to the value of the ID token life-span by default and the user will be redirected to the OIDC provider to re-authenticate once the session has expired. If this property is set to a non-zero value then the expired ID token can be refreshed before the session has expired. This property will be ignored if the `token.refresh-expired` property has not been enabled.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`5M`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.java-script-auto-redirect]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.java-script-auto-redirect[quarkus.oidc.authentication.java-script-auto-redirect]`

[.description]
--
If this property is set to 'true' then a normal 302 redirect response will be returned if the request was initiated via JavaScript API such as XMLHttpRequest or Fetch and the current user needs to be (re)authenticated which may not be desirable for Single Page Applications since it automatically following the redirect may not work given that OIDC authorization endpoints typically do not support CORS. If this property is set to `false` then a status code of '499' will be returned to allow the client to handle the redirect manually
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.extra-params-extra-params]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.authentication.extra-params-extra-params[quarkus.oidc.authentication.extra-params]`

[.description]
--
Additional properties which will be added as the query parameters to the authentication redirect URI.
--|`Map<String,String>` 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.redirect-path]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.redirect-path[quarkus.oidc."tenant".authentication.redirect-path]`

[.description]
--
Relative path for calculating a "redirect_uri" query parameter. It has to start from a forward slash and will be appended to the request URI's host and port. For example, if the current request URI is 'https://localhost:8080/service' then a 'redirect_uri' parameter will be set to 'https://localhost:8080/' if this property is set to '/' and be the same as the request URI if this property has not been configured. Note the original request URI will be restored after the user has authenticated if 'restorePathAfterRedirect' is set to 'true'.
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.restore-path-after-redirect]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.restore-path-after-redirect[quarkus.oidc."tenant".authentication.restore-path-after-redirect]`

[.description]
--
If this property is set to 'true' then the original request URI which was used before the authentication will be restored after the user has been redirected back to the application. Note if `redirectPath` property is not set the the original request URI will be restored even if this property is disabled.
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.remove-redirect-parameters]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.remove-redirect-parameters[quarkus.oidc."tenant".authentication.remove-redirect-parameters]`

[.description]
--
Remove the query parameters such as 'code' and 'state' set by the OIDC server on the redirect URI after the user has authenticated by redirecting a user to the same URI but without the query parameters.
--|boolean 
|`true`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.verify-access-token]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.verify-access-token[quarkus.oidc."tenant".authentication.verify-access-token]`

[.description]
--
Both ID and access tokens are fetched from the OIDC provider as part of the authorization code flow. ID token is always verified on every user request as the primary token which is used to represent the principal and extract the roles. Access token is not verified by default since it is meant to be propagated to the downstream services. The verification of the access token should be enabled if it is injected as a JWT token. Access tokens obtained as part of the code flow will always be verified if `quarkus.oidc.roles.source` property is set to `accesstoken` which means the authorization decision will be based on the roles extracted from the access token. Bearer access tokens are always verified.
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.force-redirect-https-scheme]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.force-redirect-https-scheme[quarkus.oidc."tenant".authentication.force-redirect-https-scheme]`

[.description]
--
Force 'https' as the 'redirect_uri' parameter scheme when running behind an SSL terminating reverse proxy. This property, if enabled, will also affect the logout `post_logout_redirect_uri` and the local redirect requests.
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.scopes]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.scopes[quarkus.oidc."tenant".authentication.scopes]`

[.description]
--
List of scopes
--|list of string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.extra-params-extra-params]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.extra-params-extra-params[quarkus.oidc."tenant".authentication.extra-params]`

[.description]
--
Additional properties which will be added as the query parameters to the authentication redirect URI.
--|`Map<String,String>` 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-force-secure]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-force-secure[quarkus.oidc."tenant".authentication.cookie-force-secure]`

[.description]
--
If enabled the state, session and post logout cookies will have their 'secure' parameter set to 'true' when HTTP is used. It may be necessary when running behind an SSL terminating reverse proxy. The cookies will always be secure if HTTPS is used even if this property is set to false.
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-path]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-path[quarkus.oidc."tenant".authentication.cookie-path]`

[.description]
--
Cookie path parameter value which, if set, will be used to set a path parameter for the session, state and post logout cookies. The `cookie-path-header` property, if set, will be checked first.
--|string 
|`/`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-path-header]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-path-header[quarkus.oidc."tenant".authentication.cookie-path-header]`

[.description]
--
Cookie path header parameter value which, if set, identifies the incoming HTTP header whose value will be used to set a path parameter for the session, state and post logout cookies. If the header is missing then the `cookie-path` property will be checked.
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-domain]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.cookie-domain[quarkus.oidc."tenant".authentication.cookie-domain]`

[.description]
--
Cookie domain parameter value which, if set, will be used for the session, state and post logout cookies.
--|string 
|


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.user-info-required]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.user-info-required[quarkus.oidc."tenant".authentication.user-info-required]`

[.description]
--
If this property is set to 'true' then an OIDC UserInfo endpoint will be called
--|boolean 
|`false`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.session-age-extension]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.session-age-extension[quarkus.oidc."tenant".authentication.session-age-extension]`

[.description]
--
Session age extension in minutes. The user session age property is set to the value of the ID token life-span by default and the user will be redirected to the OIDC provider to re-authenticate once the session has expired. If this property is set to a non-zero value then the expired ID token can be refreshed before the session has expired. This property will be ignored if the `token.refresh-expired` property has not been enabled.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`5M`


a| [[quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.java-script-auto-redirect]]`link:#quarkus-oidc-oidc-tenant-config-authentication_quarkus.oidc.-tenant-.authentication.java-script-auto-redirect[quarkus.oidc."tenant".authentication.java-script-auto-redirect]`

[.description]
--
If this property is set to 'true' then a normal 302 redirect response will be returned if the request was initiated via JavaScript API such as XMLHttpRequest or Fetch and the current user needs to be (re)authenticated which may not be desirable for Single Page Applications since it automatically following the redirect may not work given that OIDC authorization endpoints typically do not support CORS. If this property is set to `false` then a status code of '499' will be returned to allow the client to handle the redirect manually
--|boolean 
|`true`

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
